# TradeMiner

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vite.config.ts
docs/adr/: 0001-python-strategy-interface.md  0002-daily-adjusted-market-data-first.md  0003-shared-strategy-runtime.md  0004-trusted-strategy-execution.md  0005-selection-backtest-first.md  0006-akshare-default-data-provider.md  0007-market-data-cache.md  0008-single-user-server-with-shared-cache.md  0009-first-version-application-stack.md  0010-persistent-jobs-with-in-process-execution.md  0011-persist-result-snapshots.md  0012-strategy-source-versioning.md  0013-split-transactional-and-analytical-storage.md  0014-manual-and-scheduled-market-data-sync.md  0015-mvp-strategy-api.md  0016-source-strategy-library.md  0017-playwright-web-e2e-tests.md  README.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/architecture/: README.md
src/trademiner/: __init__.py  cli.py  jobs.py  results.py  storage.py
src/trademiner/api/: __init__.py  app.py
src/trademiner/backtest/: __init__.py  repository.py  selection.py
tests/: e2e_server.py  test_cli_status.py  test_jobs_api.py  test_market_data_sync.py  test_result_snapshots.py  test_selection_backtests.py  test_strategy_discovery.py  test_strategy_runs.py  test_sync_schedule_diagnostics.py  test_system_status.py
tests/e2e/: trademiner.spec.ts
web/: index.html
web/src/: App.tsx  styles.css
(+17 files in other folders)
