[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trademiner"
version = "0.1.0"
description = "A trading opportunity mining assistant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "akshare>=1.18.64",
  "duckdb>=1.0",
  "fastapi>=0.115",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[project.scripts]
trademiner = "trademiner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
